# otio-svg-adapter

./: LICENSE-MIT  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  create_draft_release.yaml  deploy_package.yaml
otio_plugin_template/: plugin_manifest.json
otio_plugin_template/adapters/: my_adapter.py
otio_plugin_template/hooks/: my_hook.py
otio_plugin_template/operations/: my_media_linker.py
otio_plugin_template/schemadefs/: my_schemadef.py
src/otio_svg_adapter/: media_ref_handlers.py  plugin_manifest.json  primitives.py  svg.py  writer.py
tests/: test_my_plugin.py  test_svg_adapter.py
tests/sample_data/: media_ref_handling.otio  simple_cut_no_available_range.otio
